--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-icon" href="https://i.postimg.cc/ZBPnjK0r.png">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>小叶子聊天室</title>
+    <title>萌え日志</title>
     <style>
       /* --- 全局平滑过渡效果 --- */
 body, #chat-container, #chat-header, #bottom-panel, .settings-content, 
